# attestation-sandbox

./: .gitignore  README.md  ubuntu-bootstrap-mvj.sh  win-bootstrap-and-build.ps1  windows-bootstrap-mvj.ps1
dev-variants/validator-cmake/: README.md
dev-variants/validator-cmake/include/: base64.hpp  x509.hpp
dev-variants/validator-cmake/src/: verify.cpp  x509.cpp
dev-variants/validator-linux-make/: .gitignore  Makefile  README.md
dev-variants/validator-linux-make/src/: main.cpp  verify.cpp
dev-variants/verifier-linux-make/include/: context.hpp
dev-variants/verifier-linux-make/src/: context.cpp  x509.cpp
dev-variants/verifier-ubuntu-cmake/: CMakeLists.txt  Makefile  README.md  linux_build_and_run.sh
dev-variants/verifier-ubuntu-cmake-OLD/: CMakeLists.txt  README.md  linux_build_and_run.sh
dev-variants/verifier-ubuntu-cmake-OLD/include/: ascii_escape_code.hpp
dev-variants/verifier-ubuntu-cmake-OLD/src/: context.cpp
dev-variants/verifier-ubuntu-cmake-vcpkg/: README.md  ubuntu-bootstrap-mvj.sh  ubuntu_setup_and_build.sh
dev-variants/verifier-ubuntu-cmake/include/: verify.hpp
dev-variants/verifier-ubuntu-cmake/src/: jwt.cpp  main.cpp  x509.cpp
dev-variants/verifier-ubuntu-make/: Makefile  README.md
dev-variants/verifier-ubuntu-make-OLD/: README.md
dev-variants/verifier-ubuntu-make-OLD/src/: context.cpp  main.cpp
dev-variants/verifier-ubuntu-make-orig/: Makefile
dev-variants/verifier-ubuntu-make/include/: context.hpp
dev-variants/verifier-ubuntu-make/src/: context.cpp  main.cpp
dev-variants/verifier-windows-cmake/: CMakeLists.txt  README.md  windows-bootstrap-mvj.ps1  windows_setup_and_build.ps1
jwt-verifier/: CMakeLists.txt  ubuntu_setup_and_build.sh
jwt-verifier/tmp/: Microsoft.Azure.DCAP.1.10.0.nupkg  open-enclave.OEHOSTVERIFY.0.17.7.nupkg
jwt-verifier/tmp/msdcap_installed_nupkg/Microsoft.Azure.DCAP/: .signature.p7s
jwt-verifier/tmp/msdcap_installed_nupkg/Microsoft.Azure.DCAP/tools/: InstallAzureDCAP.ps1
jwt-verifier/tmp/oe_installed_nupkg/open-enclave.OEHOSTVERIFY/openenclave/lib/openenclave/cmake/: openenclave-config-version.cmake  openenclave-hostverify-targets-release.cmake  openenclave-hostverify-targets.cmake
jwt-verifier/tmp/oe_installed_nupkg/open-enclave.OEHOSTVERIFY/openenclave/lib/openenclave/host/: oehostverify.lib
maa-validate-jwt/: CMakeLists.txt  README.md  linux_build_and_run.sh  windows_build_and_run.ps1
maa-validate-jwt/include/: ascii_escape_code.hpp  base64.hpp  context.hpp  jwks.hpp  jwt.hpp  options.hpp  utils.hpp  verify.hpp  x509.hpp
maa-validate-jwt/src/: .x509.cpp.swp  context.cpp  curl.cpp  jwks.cpp  jwt.cpp  main.cpp  options.cpp  utils.cpp  verify.cpp  x509.cpp
